--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -38,3 +38,12 @@
 /* .home2bg{
     background-image: url('../assets/foodtable.jpg');
 } */
+.circle{
+    right: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #f79400;
+    /* clip-path: circle(40% at 70% 10%); */
+    clip-path: circle(30.4% at 100% 51%);
+}
