--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -49,3 +49,8 @@
         background: #f79400;
         border-radius: 79% 21% 72% 28% / 37% 65% 35% 63%;
     }
+    .test{
+        justify-content: center;
+        align-items: center;
+        display: flex;
+    }
