--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -55,11 +55,11 @@
 .testfont{
     font-family: 'Hind Madurai', sans-serif;
 }
-.scroller{
+/* .scroller{
     scroll-snap-align: unset;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
-}
+} */
 .homebluebg{
     background-color: #f2f7ff;
 }
